# Indexer

./: .gitignore  LICENSE.md  README.md
Versions/Indexer_v0.01.5/: indexer
docs/: ARCHITECT.md  modules.md  scratch.md
docs/dev/: functions_view_scratch.md  scratch.md
indexer/: Cargo.toml
indexer/.gpt_index/: index_v3.json
indexer/.gpt_index/chunks/: indexer_paste_1.md
indexer/.gpt_index/functions/: indexer_PROJECT_FUNCTIONS.md
indexer/.gpt_index/history/chunks/: paste_1.md
indexer/.gpt_index/history/diffs/: indexer_20250810_214504.json
indexer/.gpt_index/history/full/: indexer_20250810_214504.jsonl
indexer/.gpt_index/indexes/: indexer.jsonl
indexer/.gpt_index/maps/: PROJECT_MAP.md  indexer_PROJECT_MAP.md
indexer/.gpt_index/trees/: PROJECT_TREE.md
indexer/.gpt_index/types/: indexer_PROJECT_TYPES.md
indexer/src/: chunker.rs  commands.rs  custom_view.rs  diff.rs  file_intent_entry.rs  functions_view.rs  helpers.rs  index_v3.rs  intent.rs  lib.rs  main.rs  map_view.rs  scan.rs  snippet.rs  tree_view.rs  types_view.rs  util.rs
