[package]
name = "indexer"
version = "0.3.0"
edition = "2021"

resolver = "1"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
hex = "0.4.3"
ignore = "0.4.23"
memchr = "2.7.5"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1 = "0.10.6"
sha2 = "0.10.9"
syn = "2.0.106"
proc-macro2 = { version = "1.0.100", features = ["span-locations"] }
walkdir = "2.5.0"
